--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-standard": "~4.0.1",
     "husky": "~3.0.9",
-    "node-forge": "~0.9.1"
+    "node-forge": "~0.9.1",
+    "sinon": "~7.5.0"
   },
   "engines": {
     "node": ">=8.0.0"
