--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/futurestudio/hapi-jwt/issues"
   },
   "dependencies": {
+    "@hapi/joi": "~16.1.7",
     "dayjs": "~1.8.17",
     "deepmerge": "~4.2.2",
     "hapi-request-utilities": "~3.0.0",
