--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   ],
   "license": "MIT",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/futurestudio/hapi-jwt.git"
