--- a/package.json
+++ b/package.json
@@ -7,19 +7,18 @@
     "url": "https://github.com/futurestudio/hapi-jwt/issues"
   },
   "dependencies": {
-    "@hapi/joi": "~16.1.8",
+    "@hapi/joi": "~17.0.0",
     "dayjs": "~1.8.18",
     "deepmerge": "~4.2.2",
     "hapi-request-utilities": "~3.0.0",
-    "jose": "~1.18.1",
-    "jws": "~4.0.0"
+    "jose": "~1.18.1"
   },
   "devDependencies": {
-    "@hapi/catbox": "~10.2.3",
+    "@hapi/catbox": "~11.0.0",
     "@hapi/catbox-redis": "~5.0.5",
-    "@hapi/code": "~7.0.0",
+    "@hapi/code": "~8.0.1",
     "@hapi/hapi": "~18.4.0",
-    "@hapi/lab": "~22.0.2",
+    "@hapi/lab": "~22.0.3",
     "eslint": "~6.8.0",
     "eslint-config-standard": "~14.1.0",
     "eslint-plugin-import": "~2.19.1",
